avoid rewrapping when opening periods *glares at imovie*, no double ripple for iOS, alt sched parser, easier to create doc fragments, bare bone gunn schedule app

--- a/css/period.css
+++ b/css/period.css
@@ -65,6 +65,7 @@
   cursor: pointer;
   border-radius: 2px;
   overflow: hidden;
+  transition: padding-right .2s, width .2s;
 }
 .period .name:hover {
   background-color: var(--textbox-background);
@@ -73,6 +74,10 @@
   outline: none;
   background-color: var(--focused-textbox-background);
   box-shadow: inset 0 0 0 1px var(--focused-textbox-border);
+}
+.period.open .name {
+  padding-right: 20px;
+  width: calc(100% - 10px);
 }
 
 /* DETAILS */
@@ -84,12 +89,15 @@
   height: 0;
   color: var(--span-colour);
   line-height: 1.2;
+  box-sizing: border-box;
   transition: all .2s;
 }
 .period .previewed {
   height: auto;
+  margin-top: 10px;
 }
-.period.open span, .period .previewed {
+.period.open span {
+  padding-right: 10px;
   margin-top: 10px;
 }
 .period em {
